--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -1906,6 +1906,90 @@ body.error404 {
 	background-color: unset;
 }
 
+body.error404 a {
+	color: var(--wp--custom--link--color--text);
+}
+
+body.error404 .wp-block-wporg-local-navigation-bar a {
+	color: inherit;
+	text-decoration: unset;
+}
+
+body.error404 .wp-block-wporg-local-navigation-bar a:hover,
+body.error404 .wp-block-wporg-local-navigation-bar a:focus {
+	text-decoration: underline;
+}
+
+body.error404 #searchform > div {
+	--wp--custom--button--color--text: var(--wp--preset--color--charcoal-1);
+	--wp--custom--button--color--background: transparent;
+	--wp--custom--button--hover--color--text: var(--wp--preset--color--charcoal-1);
+	--wp--custom--button--hover--color--background: var(--wp--preset--color--light-grey-2);
+	--local--focus--outline-color: var(--wp--preset--color--white);
+	--local--focus--border-color: var(--wp--preset--color--blueberry-1);
+	--local--clear--color: var(--wp--preset--color--charcoal-1);
+	--local--clear--focus--color: var(--wp--preset--color--blueberry-1);
+	--local--size: 38px;
+
+	position: relative;
+	padding: 0;
+	border-width: var(--wp--custom--form--border--width);
+	border-radius: var(--wp--custom--form--border--radius);
+	background-color: var(--wp--custom--form--search--color--background);
+	max-width: 290px;
+	display: flex;
+	align-items: stretch;
+	height: var(--local--size);
+	color: var(--wp--custom--button--color--text);
+}
+
+body.error404 #searchform input[type="text"] {
+	flex: 1;
+	border: none;
+	background-color: var(--wp--custom--form--search--color--background);
+	font-size: var(--wp--custom--form--typography--font-size);
+	line-height: var(--wp--custom--button--typography--line-height);
+	color: var(--wp--custom--form--search--color--text);
+}
+
+body.error404 #searchform input[type="text"]:focus,
+body.error404 #searchform #searchsubmit:focus {
+	outline: 1.5px solid var(--local--focus--outline-color);
+	outline-offset: -1.5px;
+	box-shadow: inset 0 0 0 3px var(--local--focus--border-color);
+}
+
+body.error404 #searchform #searchsubmit {
+	background-color: var(--wp--custom--button--color--background);
+	border: unset;
+	height: 100%;
+	width: var(--local--size);
+	text-indent: -999px;
+}
+
+/*
+ * Search icon
+ */
+body.error404 #searchform > div::after {
+	content: "";
+	display: block;
+	position: absolute;
+	top: 0;
+	inset-inline-end: 0;
+	width: var(--local--size);
+	height: 100%;
+	mask-repeat: no-repeat;
+	mask-position: center;
+	mask-size: 24px;
+	mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'%3E%3Cpath d='M13 5c-3.3 0-6 2.7-6 6 0 1.4.5 2.7 1.3 3.7l-3.8 3.8 1.1 1.1 3.8-3.8c1 .8 2.3 1.3 3.7 1.3 3.3 0 6-2.7 6-6S16.3 5 13 5zm0 10.5c-2.5 0-4.5-2-4.5-4.5s2-4.5 4.5-4.5 4.5 2 4.5 4.5-2 4.5-4.5 4.5z'%3E%3C/path%3E%3C/svg%3E");
+	vertical-align: middle;
+	background-color: currentColor;
+}
+
+body.error404 .o2-app-footer #nav-below {
+	border-top: unset;
+}
+
 /*
  * Page Templates
  */
