Breathe 2024: Fix welcome box layout
New RTL styles didn't account for this layout using the same selectors.

See https://github.com/WordPress/wordpress.org/issues/377


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14269 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -909,26 +909,22 @@ input[type="submit"]:hover {
 	}
 }
 
-#primary {
+.content-area {
 	width: 68%;
 	float: inline-start;
 	padding-right: unset;
 	padding-inline-end: var(--wp--preset--spacing--20);
 }
 
+.widget-area,
 #secondary {
 	float: inline-end;
 	clear: inline-end;
 }
 
 @media (max-width: 876px) {
-	#primary {
+	.content-area {
 		width: 100%;
-	}
-}
-
-@media (max-width: 876px) {
-	#primary {
 		-webkit-backface-visibility: initial;
 		padding-inline-end: unset;
 	}
