Breathe 2024: Fix resolved and unresolved post layout
Add padding around comments and remove space below post navigation.

Fixes https://github.com/WordPress/wordpress.org/issues/440


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14277 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -1460,6 +1460,16 @@ article.state-unresolved:not(.status-private):before {
 	height: calc(100% + 2px);
 }
 
+article.state-resolved .o2-post-comments,
+article.state-unresolved .o2-post-comments {
+	padding: 0 var(--wp--preset--spacing--20);
+}
+
+article.state-resolved .navigation,
+article.state-unresolved .navigation {
+	margin-bottom: unset;
+}
+
 @media (max-width: 876px) {
 	.state-resolved,
 	.state-unresolved {
