bbPress.org: theme tweaks
Part of bb-base theme changes

See: https://buddypress.trac.wordpress.org/ticket/9262

git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14284 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/buddypress.org/public_html/wp-content/themes/bbpress-org/style.css
+++ b/buddypress.org/public_html/wp-content/themes/bbpress-org/style.css
@@ -1,12 +1,11 @@
 /**
- * Theme Name: bbPress.org 2013
- * Theme URL: https://bbPress.org
+ * Theme Name:  bbPress.org Theme
+ * Theme URL:   https://bbPress.org
  * Description: A WordPress theme for bbPress.org
- * Author: John James Jacoby
- * Author URI: http://jaco.by
- * Version: 2.1
- * Template: bb-base
- * Tags: bbpress, gray, 508, compliance, fixed width, widgets, gallery
+ * Author:      John James Jacoby
+ * Author URI:  https://jjj.blog
+ * Version:     2.2
+ * Template:    bb-base
  */
 
 /**
