BuddyPress Codex: theme tweaks
Part of bb-base theme changes

See: https://buddypress.trac.wordpress.org/ticket/9262

git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14286 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/buddypress.org/public_html/wp-content/themes/codex-buddypress-org/style.css
+++ b/buddypress.org/public_html/wp-content/themes/codex-buddypress-org/style.css
@@ -1,10 +1,10 @@
 /**
- * Theme Name: BuddyPress.org Codex 2013
- * Theme URL: https://codex.buddypress.org
- * Description: A WordPress theme for BuddyPress.org codex
- * Author: John James Jacoby
- * Author URI: http://jaco.by
- * Version: 2.1
- * Template: bb-base
- * Tags: buddypress, gray, 508, compliance, fixed width, widgets, gallery
+ * Theme Name:  BuddyPress.org Codex 2013
+ * Theme URL:   https://codex.buddypress.org
+ * Description: A WordPress theme for the BuddyPress.org codex
+ * Author:      John James Jacoby
+ * Author URI:  https://buddypress.org
+ * Version:     2.1
+ * Template:    bb-base
+ * Tags:        buddypress
  */
