BuddyPress/bbPress Trac: update header & footer templates
* Links to the new `style-trac.css` CSS file from inside of the Base theme.
* Syncs the header & footer links to Base theme.

See: https://buddypress.trac.wordpress.org/ticket/9262



git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14292 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/trac.wordpress.org/templates/buddypress/wporg-footer.html
+++ b/trac.wordpress.org/templates/buddypress/wporg-footer.html
@@ -4,23 +4,25 @@
 	  py:strip="">
 
 		<div id="footer">
-			<div class="links">
-				<p>
-					See also:
-					<a href="http://wordpress.org">WordPress.org</a> &bull;
-					<a href="http://bbpress.org">bbPress.org</a> &bull;
-					<a href="http://buddypress.org">BuddyPress.org</a> &bull;
-					<a href="http://ma.tt">Matt</a> &bull;
-					<a href="http://bbpress.org/feed/" title="RSS Feed for Articles">Blog RSS</a>
-				</p>
-			</div>
-			<div class="details">
-				<p>
-					<a href="http://twitter.com/buddypressdev" class="twitter">Follow BuddyPress on Twitter</a> &bull;
-					<a href="http://buddypress.org/about/gpl/">GPL</a> &bull;
-					<a href="http://buddypress.org/contact/">Contact Us</a> &bull;
-					<a href="http://buddypress.org/terms/">Terms of Service</a>
-				</p>
+			<div id="footer-inner">
+				<div class="links">
+					<p>
+						<a href="https://wordpress.org">WordPress.org</a>
+						<a href="https://bbpress.org">bbPress.org</a>
+						<a href="https://buddypress.org">BuddyPress.org</a>
+						<a href="https://ma.tt">Matt</a>
+						<a href="https://buddypress.org/feed/" title="RSS Feed for Articles">Blog RSS</a>
+					</p>
+				</div>
+				<div class="details">
+					<p>
+						<a href="https://buddypress.org/about/gpl/">GPL</a>
+						<a href="https://buddypress.org/contact/">Contact Us</a>
+						<a href="https://wordpress.org/about/privacy/">Privacy</a>
+						<a href="https://buddypress.org/terms/">Terms of Service</a>
+						<a href="https://x.com/buddypress">X</a>
+					</p>
+				</div>
 			</div>
 		</div>
 
