BuddyPress.org/bbPress.org: Base theme improvements
* Fix bbPress link color CSS variable value
* Fix Trac admin styling
* Improve contrast of BuddyPress colors
* Improve Trac styling in Reports, Changesets, fieldsets, and form fields

Props slaffik.

See: https://buddypress.trac.wordpress.org/ticket/9262

git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14298 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/buddypress.org/public_html/wp-content/themes/bb-base/style-bbpress.css
+++ b/buddypress.org/public_html/wp-content/themes/bb-base/style-bbpress.css
@@ -4,7 +4,7 @@
 :root {
 
 	/* Header */
-	--bbbase-header-background-color: rgba(141,199,112,1);
+	--bbbase-header-background-color: rgba(141, 199, 112, 1);
 	--bbbase-header-image-url: url('../bbpress-org/images/bee.png');
 	--bbbase-header-image-url-2x: url('../bbpress-org/images/bee-2x.png');
 	--bbbase-header-image-size: 231px 162px;
@@ -19,18 +19,18 @@
 	--bbbase-logo-image-width: 208px;
 
 	/* Buttons */
-	--bbbase-button-background-color: rgba(0,153,51,1);
-	--bbbase-button-background-color-hover: rgba(0,153,51,1);
-	--bbbase-button-color: rgba(235,255,235,0.9);
-	--bbbase-button-color-hover: rgba(235,255,235,0.9);
+	--bbbase-button-background-color: rgba(0, 153, 51, 1);
+	--bbbase-button-background-color-hover: rgba(0, 153, 51, 1);
+	--bbbase-button-color: rgba(235, 255, 235, 0.9);
+	--bbbase-button-color-hover: rgba(235, 255, 235, 0.9);
 
 	/* Links */
-	--bbbase-link-color: #rgba(50,140,0,1);
-	--bbbase-link-color-hover: rgba(213,78,33,1);
+	--bbbase-link-color: rgba(50, 140, 0, 1);
+	--bbbase-link-color-hover: rgba(213, 78, 33, 1);
 
 	/* Subnav */
-	--bbbase-subnav-color-hover: rgba(141,199,112,1);
+	--bbbase-subnav-color-hover: rgba(141, 199, 112, 1);
 
 	/* Lists */
-	--bbbase-list-hover-helper-background: rgba(235,255,235,1);
+	--bbbase-list-hover-helper-background: rgba(235, 255, 235, 1);
 }
