--- a/buddypress.org/public_html/wp-content/themes/bb-base/style-trac.css
+++ b/buddypress.org/public_html/wp-content/themes/bb-base/style-trac.css
@@ -22,7 +22,7 @@ body.trac .create-new-ticket.button {
 
 body.trac fieldset {
 	position: relative;
-	border-radius: 8px;
+	border-radius: var(--bbbase-border-radius);
 }
 
 body.trac label {
@@ -41,7 +41,7 @@ body.trac textarea {
 
 body.trac input[type=text],
 body.trac input.textwidget {
-	border-radius: 8px;
+	border-radius: var(--bbbase-border-radius);
 }
 
 body.trac .trac-resizable textarea {
@@ -62,6 +62,15 @@ body.trac :visited {
 body.trac ul,
 body.trac li {
 	border: none;
+}
+
+body.trac .buttons {
+	margin: 30px 0;
+	text-align: right;
+}
+
+body.trac .buttons input {
+	margin: 0 0 0 10px;
 }
 
 body.trac table.listing thead th {
@@ -208,7 +217,7 @@ body.trac #subnav-inner ul li:hover a:focus {
 
 body.trac #subnav #nav-user:before {
 	font: normal 20px/1 'dashicons';
-	color: rgba(240, 246, 252, .6);
+	color: rgba(240, 246, 252, .6); /* Not variable */
 	content: '\f120';
 	float: left;
 	-webkit-font-smoothing: antialiased;
@@ -219,9 +228,6 @@ body.trac #subnav #nav-user:before {
 
 body.trac #subnav #nav-user {
 	width: 100%;
-}
-body.trac #subnav #nav-user li {
-
 }
 
 body.trac #subnav #nav-user a {
@@ -239,7 +245,7 @@ body.trac #subnav #nav-user span.trac-author-user {
 /* Wrappers */
 body.trac #banner,
 body.trac #mainnav {
-	background-color: #eee;
+	background-color: var(--bbbase-grey-background-color-low-contrast);
 }
 
 body.trac #banner,
@@ -281,8 +287,9 @@ body.trac #banner form#search {
 
 body.trac #banner form#search input {
 	font-size: 16px;
+	font-weight: 400;
 	padding: 10px 15px;
-	border-radius: 8px;
+	border-radius: var(--bbbase-border-radius);
 }
 
 body.trac #banner form#search input[type=text] {
@@ -291,7 +298,7 @@ body.trac #banner form#search input[type=text] {
 
 /* Main Navigation */
 body.trac #mainnav {
-	border-bottom: 1px solid rgba(0, 0, 0, 0.3) !important;
+	border-bottom: 1px solid var(--bbbase-grey-border-color-low-contrast) !important;
 }
 
 body.trac #mainnav ul,
@@ -317,7 +324,7 @@ body.trac #mainnav li.active a {
 	margin-top: 2px;
 	background-color: #fff !important;
 	color: #000 !important;
-	border: 1px solid rgba(0, 0, 0, 0.3) !important;
+	border: 1px solid var(--bbbase-grey-border-color-low-contrast) !important;
 	border-bottom-color: transparent !important;
 }
 
@@ -360,9 +367,48 @@ body.trac #main > h1 {
 	display: none;
 }
 
+/* Notices */
+body.trac #main .wp-notice {
+	margin: 0;
+	padding: 30px;
+}
+
+body.trac #main .wp-notice p:first-child {
+	margin-top: 0;
+}
+
+body.trac #main .wp-notice p:last-child {
+	margin-bottom: 0;
+}
+
+body.trac #main .newticket-not-here .support,
+body.trac #main .newticket-not-here .security {
+    margin-bottom: 0;
+}
+
+/* Alt Links */
+body.trac #main #altlinks {
+	float: none;
+	text-align: center;
+	margin: 30px 0;
+	max-width: none;
+}
+
+body.trac #main #altlinks .preferences-link {
+	float: none;
+	margin: 0 0 0 auto;
+	padding: 20px;
+}
+
+body.trac #main #altlinks > a,
+body.trac #main #altlinks h3,
+body.trac #main #altlinks li {
+    font-size: 14px;
+}
+
 /* Context Nav */
 body.trac #ctxtnav {
-	border-bottom: 1px solid rgba(0, 0, 0, 0.3) !important;
+	border-bottom: 1px solid var(--bbbase-grey-border-color-low-contrast) !important;
 }
 
 body.trac #ctxtnav ul {
@@ -469,9 +515,24 @@ body.trac #content.timeline dd {
 }
 
 /* Prefs */
+body.trac #content.prefs #tabs {
+	padding: 0;
+	margin: 0 auto;
+}
+
+body.trac #content.prefs #tabs li {
+	list-style: none;
+	padding: 15px;
+}
+
+body.trac #content.prefs #tabcontent {
+	margin: 0 0 60px;
+	padding: 60px 0 0 0;
+}
+
 body.trac #content #prefs {
 	background: #eee;
-	border-radius: 8px;
+	border-radius: var(--bbbase-border-radius);
 	padding: 20px;
 	margin: 30px 0;
 	float: none;
@@ -503,13 +564,12 @@ body.trac #content #prefs > div > label + br {
 
 body.trac #content #prefs input,
 body.trac #content #prefs select {
-	font-size: 15px;
-	padding: 8px 10px;
-	border-radius: 8px;
+	padding: 8px 12px;
+	border-radius: var(--bbbase-border-radius);
 }
 
 body.trac #content #prefs fieldset {
-	border-radius: 8px;
+	border-radius: var(--bbbase-border-radius);
 	border: 1px solid #ccc;
 	padding: 10px 20px 20px 20px;
 	margin: 10px 0;
@@ -558,7 +618,7 @@ body.trac pre.literal-block {
     border: 1px solid #aa0;
     box-shadow: 0 0 1em #eee;
 	font-size: 15px;
-    border-radius: 8px;
+    border-radius: var(--bbbase-border-radius);
     margin: 20px 0;
     padding: 15px 20px;
     overflow: auto;
@@ -626,9 +686,33 @@ body.trac #content.report > #report-notfound + #help {
     margin-right: auto;
 }
 
+body.trac #content.report div.reports > div {
+	position: relative;
+	padding: 20px;
+	margin-bottom: 20px;
+	background: var(--bbbase-grey-background-color-low-contrast);
+}
+
+body.trac #content.report div.reports > h2 {
+    border-bottom: none;
+	margin-top: 30px;
+}
+
+body.trac #content.report h3 {
+	border: none;
+}
+
+body.trac #content.report .inlinebuttons input[type=button],
+body.trac #content.report .inlinebuttons input[type=submit] {
+	margin-left: 5px;
+	color: var(--bbbase-button-background-color);
+	background: transparent;
+}
+
+
 /* Tickets */
 body.trac div#ticket {
-	border-radius: 8px;
+	border-radius: var(--bbbase-border-radius);
 	margin: 0 0 30px 0;
 	padding: 30px;
 }
@@ -709,7 +793,7 @@ body.trac div#trac-add-comment,
 body.trac div#ticketchange + div {
 	margin-bottom: 30px;
 	border: 1px solid #ccc;
-	border-radius: 8px;
+	border-radius: var(--bbbase-border-radius);
 	overflow: hidden;
 }
 
@@ -718,6 +802,10 @@ body.trac div#attachments > div.attachments,
 body.trac div#github-prs > ul.pull-requests,
 body.trac div#trac-add-comment fieldset {
 	border: none;
+}
+
+body.trac #content.ticket {
+	max-width: 940px;
 }
 
 body.trac #content.ticket h3.foldable {
@@ -738,6 +826,16 @@ body.trac #content.ticket div#github-prs + div.collapsed h3.foldable {
 
 body.trac #content.ticket div#github-prs + div:not(.collapsed) h3.foldable {
 	margin: 30px 0;
+}
+
+body.trac #content.ticket #propertyform[action*="/newticket"] fieldset {
+    padding: 30px;
+    border: 1px solid var(--bbbase-grey-border-color-low-contrast);
+    background: var(--bbbase-light-background-color-low-contrast);
+}
+
+body.trac #content.ticket #propertyform[action*="/newticket"] fieldset fieldset {
+	padding: 0;
 }
 
 body.trac #github-prs ul.pull-requests {
@@ -785,7 +883,7 @@ body.trac #github-prs .button {
 	background-color: #f0f0f0;
 	color: #aaa;
 	border: 1px solid #ccc;
-	border-radius: 8px;
+	border-radius: var(--bbbase-border-radius);
 }
 
 @media screen and (max-width: 820px) {
@@ -858,8 +956,219 @@ body.trac #modify fieldset legend {
 	margin: 0 10px;
 }
 
-/* Footer */
+/* Browser */
+body.trac #content.browser {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	gap: 30px;
+	margin-bottom: 60px;
+}
 
+body.trac #content.browser h1,
+body.trac #content.browser #anydiff,
+body.trac #content.browser #help {
+	flex-basis: 100%;
+	margin-bottom: 0;
+}
+
+body.trac #content.browser #anydiff,
+body.trac #content.browser #help {
+	text-align: right;
+}
+
+body.trac #content.browser #diffrev,
+body.trac #content.browser #jumprev,
+body.trac #content.browser #jumploc {
+    float: none;
+    font-size: 16px;
+    margin: 0 20px 0 0;
+}
+
+body.trac #content.browser #diffrev input,
+body.trac #content.browser #jumprev input,
+body.trac #content.browser #jumploc select,
+body.trac #content.browser #jumploc input {
+    font-size: 16px;
+    margin: 0;
+}
+
+body.trac #content.browser #info .props {
+    list-style: none;
+    margin: 0;
+    padding: 20px;
+	font-family: monospace;
+}
+body.trac #content.browser #info .props li:not(:last-of-type) {
+	margin-bottom: 20px;
+}
+
+/* Changeset */
+body.trac #main .message.searchable p {
+	margin: 15px 0;
+}
+
+body.trac #main .message.searchable p:first-of-type {
+	margin-top: 0;
+}
+
+body.trac #main .message.searchable p:last-of-type {
+	margin-bottom: 0;
+}
+
+body.trac #file-legend {
+    margin: 0;
+}
+
+body.trac .legend {
+	font-size: 16px;
+	padding: 0;
+	margin: 0;
+}
+
+body.trac #main #info {
+	background: var(--bbbase-grey-background-color-low-contrast);
+	border: 1px solid var(--bbbase-grey-border-color-low-contrast);
+}
+
+body.trac #main #info th,
+body.trac #main #info td {
+	padding: 20px;
+}
+
+body.trac #main #info tr:first-child th,
+body.trac #main #info tr:first-child td {
+	padding-bottom: 10px;
+}
+
+body.trac #main #info tr:last-child th,
+body.trac #main #info tr:last-child td {
+	padding-top: 10px;
+}
+
+/* Admin */
+body.trac #content.admin {
+	float: none;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	gap: 30px;
+	margin-bottom: 60px;
+}
+
+body.trac #content.admin h1 {
+	float: none;
+	flex-basis: 100%;
+	margin-bottom: 0;
+}
+
+body.trac #content.admin #tabs {
+	float: none;
+	flex: 0 0 auto;
+	width: 200px;
+	margin: 0;
+	padding: 0;
+	border-radius: var(--bbbase-border-radius);
+	background-color: var(--bbbase-grey-background-color-low-contrast);
+}
+
+body.trac #content.admin #tabs > ul {
+    margin: 20px 0 0 0;
+    padding: 0;
+}
+
+body.trac #content.admin #tabs > ul:not(:last-of-type) {
+	border-bottom: 1px solid var(--bbbase-grey-border-color-low-contrast)
+}
+
+body.trac #content.admin #tabs > ul > li {
+	margin: 15px;
+}
+
+body.trac #content.admin #tabs > ul > li > ul {
+	margin: 8px -21px 0 -21px;
+}
+
+body.trac #content.admin #tabs li {
+	list-style: none;
+	margin: 0;
+}
+
+body.trac #content.admin #tabs li li:hover {
+	background: var(--bbbase-button-background-color);
+}
+body.trac #content.admin #tabs li li.active {
+    background: var(--bbbase-button-background-color);
+    color: var(--bbbase-brightest-white);
+    border: none;
+}
+
+body.trac #content.admin #tabs li :link,
+body.trac #content.admin #tabs li :visited {
+    border: none;
+    display: block;
+	border-radius: 0;
+	padding: 8px 10px;
+	margin: 0;
+	text-decoration: none;
+}
+
+body.trac #content.admin #tabs li li.active :link,
+body.trac #content.admin #tabs li li.active :visited {
+	color: var(--bbbase-brightest-white);
+}
+
+body.trac #content.admin #tabs li li:hover a {
+	color: var(--bbbase-brightest-white);
+}
+
+body.trac #content.admin #tabcontent {
+	float: none;
+	flex: 1;
+	min-width: 0;
+	margin: 0;
+	padding: 0;
+}
+body.trac #content.admin #tabcontent p.hint {
+	margin: 0;
+	padding: 0 20px 20px 20px;
+}
+body.trac #content.admin #tabcontent input {
+	max-width: 400px;
+}
+body.trac #content.admin #tabcontent fieldset {
+	margin-bottom: 30px;
+}
+body.trac #content.admin #tabcontent .field td:first-child {
+	width: 210px;
+	text-align: right;
+	padding-right: 20px;
+}
+
+/* System Messages */
+body.trac #notice.system-message,
+body.trac #notice.system-message,
+body.trac #warning.system-message,
+body.trac .warning.system-message {
+    max-width: 880px;
+    padding: 30px;
+    margin: 30px auto -30px;
+	font-size: 16px;
+    background-color: #ffe;
+    border-color: #e6db55;
+    border-radius: var(--bbbase-border-radius);
+}
+
+body.trac div.system-message .trac-close-msg {
+	border: none;
+	color: var(--bbbase-grey-border-color-low-contrast);
+	text-decoration: none;
+	text-transform: uppercase;
+	padding: 3px 5px;
+	margin: 0;
+}
+
+/* Footer */
 body.trac #footer {
 	width: 100%;
 	background-color: #f4f4f4;
@@ -872,33 +1181,6 @@ body.trac #footer {
 	margin: 0 !important;
 	height: auto;
 }
-
-body.trac #footer > * {
-	max-width: 920px;
-	width: 100%;
-}
-
-body.trac #footer-inner {
-	font-size: 12px;
-	margin: 0 auto;
-	display: flex;
-	align-items: center;
-}
-body.trac #footer div {
-	padding: 40px 0;
-}
-body.trac #footer div.details {
-	order: 1;
-	margin-right: auto;
-}
-body.trac #footer div.links {
-	order: 2;
-	margin-left: auto;
-}
-body.trac #footer p {
-	margin: 0;
-}
-
 
 /* Mock-admin bar */
 @media screen {
