BuddyPress.org/bbPress.org: add "current" class to header nav.
Ensures that the "Make" menu item is visually emphasized.

See: https://buddypress.trac.wordpress.org/ticket/9262



git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14303 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/trac.wordpress.org/templates/bbpress/wporg-header.html
+++ b/trac.wordpress.org/templates/bbpress/wporg-header.html
@@ -11,11 +11,11 @@
         <div id="header-inner">
 			<button id="mobile-menu-button" aria-expanded="false"><span class="screen-reader-text">Toggle Menu</span></button>
             <ul id="wporg-header-menu">
-                <li><a href="https://buddypress.org/about/">About</a></li>
+                <li><a href="https://bbpress.org/about/">About</a></li>
                 <li><a href="https://bbpress.org/blog/">News</a></li>
                 <li><a href="https://codex.bbpress.org/">Codex</a></li>
                 <li><a href="https://developer.bbpress.org">Develop</a></li>
-                <li><a href="https://bbpress.trac.wordpress.org">Make</a></li>
+                <li class="current"><a href="https://bbpress.trac.wordpress.org">Make</a></li>
                 <li><a href="https://bbpress.org/support/">Forums</a></li>
                 <li><a href="https://bbpress.org/download/">Download</a></li>
             </ul>
