--- a/trac.wordpress.org/templates/buddypress/wporg-header.html
+++ b/trac.wordpress.org/templates/buddypress/wporg-header.html
@@ -15,7 +15,7 @@
                 <li><a href="https://buddypress.org/blog/">News</a></li>
                 <li><a href="https://codex.buddypress.org/">Codex</a></li>
                 <li><a href="https://developer.buddypress.org">Develop</a></li>
-                <li><a href="https://buddypress.trac.wordpress.org">Make</a></li>
+                <li class="current"><a href="https://buddypress.trac.wordpress.org">Make</a></li>
                 <li><a href="https://buddypress.org/support/">Forums</a></li>
                 <li><a href="https://buddypress.org/download/">Download</a></li>
             </ul>
