--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -198,15 +198,6 @@ tr:last-of-type td {
 	background-color: color-mix( in srgb, currentColor 7%, transparent );
 }
 
-/* TODO: This should be handled by RTL CSS in mu-plugins */
-[dir="rtl"] .wp-block-wporg-local-navigation-bar {
-	padding-right: var(--wp--preset--spacing--edge-space);
-
-	@media (max-width: 889px) {
-		padding-left: unset;
-	}
-}
-
 /* 2021 global header/footer */
 
 .wp-block-group.global-header button,
@@ -250,11 +241,15 @@ p.has-background,
 
 /* Local navigation */
 
+/* This is necessary because the p2-breathe reset styles set `div { padding: 0 }`, and the mu-plugins selector
+ * `:where(.wp-block-wporg-local-navigation-bar)` is not specific enough to override it.
+*/
 .wp-block-wporg-local-navigation-bar {
-	padding-left: var(--wp--preset--spacing--edge-space);
+	padding-inline-start: var(--wp--preset--spacing--edge-space);
+	padding-inline-end: var(--wp--preset--spacing--edge-space);
 
-	@media (min-width: 890px) {
-		padding-right: var(--wp--preset--spacing--edge-space);
+	@media (max-width: 889px) {
+		padding-inline-end: 0;
 	}
 }
 
