BuddyPress.org/bbPress.org: styling bug fixes
This change ensures that content wrappers on home-pages and user-profile-pages are the intended widths.

See: https://buddypress.trac.wordpress.org/ticket/9262

git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14310 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/buddypress.org/public_html/wp-content/themes/bb-base/style.css
+++ b/buddypress.org/public_html/wp-content/themes/bb-base/style.css
@@ -1971,7 +1971,7 @@ div.plugin-meta img {
 	#footer-inner {
 		width: 960px;
 	}
-	body:not(.page-template-page-homepage) div.content {
+	body:not(.page-template-page-homepage):not(.bbp-user-page) div.content {
 		width: 700px;
 	}
 	div.leftcol {
