Breathe 2024: Better visual alignment of o2 notifications.
Fixes #7865.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14324 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
@@ -1778,6 +1778,10 @@ nav.o2-post-footer-actions ul li > span > a.genericon:before {
 	color: var(--wp--custom--link--color--text);
 }
 
+#o2-flash .o2-notification p {
+	margin: auto;
+}
+
 /*
  * Make Welcome
  */
